--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
         </main>
 
-        <footer class="attribution">
+        <!-- <footer class="attribution">
             Challenge by
             <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
             <a href="#">Nicolas Guzman M</a>.
-        </footer>
+        </footer> -->
     </body>
 </html>
